@@ -111,6 +111,7 @@
 * VersaPay: refactor authorization from structure [gasb150] #5363
 * VersaPay: Improve Message Error and Error Mapping [gasb150] #5357
 * CheckoutV2: Add metadata to Credit [almalee24] #5328
+* Normalize API versions for Adyen, Braintree & GlobalCollect [Buitragox] #5371
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
